# waib-rrg-jobs

./: .env  .gitignore  Dockerfile  README.md  logger.py  main.py  models.py  pyproject.toml
.github/workflows/: dev.yml  prod.yml
k8s/: deployment.yaml  deploymentProd.yaml  env.yaml  pdb.yaml
